[package]
name = "jwz_spotify"
version = "0.1.0"
authors = ["Spike Grobstein <me@spike.cx>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rspotify = { version = "0.9"}
tokio = { version = "0.2", features = ["full"] }
anyhow = "^1.0"
rss = { version = "^1.9.0", features = [ "from_url" ] }
regex = "1"
htmlescape = "0.3.1"

